tests/parsing/smtlib/mcil/errors/232_define-system_bad_subsys_decl_4.mcil
(define-system sys :subsys (a ()))